--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -60,6 +60,8 @@ jobs:
         run: tflint -f compact
       - name: Run TFSec Scan Tests
         uses: triat/terraform-security-scan@v3
+      - name: run aws configure
+        run: aws eks update-kubeconfig --region=us-west-2 --name=dev-eks-cluster
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color -out=tfplan
