--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -58,8 +58,9 @@ jobs:
       - name: Run TFLint Tests
         id: tflint
         run: tflint -f compact
-      - name: Run TFSec Scan Tests
-        uses: triat/terraform-security-scan@v3
+      # - name: Run TFSec Scan Tests
+      #   uses: triat/terraform-security-scan@v3
+      - uses: actions-hub/kubectl@master
       - name: run aws configure
         run: aws eks update-kubeconfig --region=us-west-2 --name=dev-eks-cluster
       - name: Terraform Plan
