--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -61,6 +61,8 @@ jobs:
       # - name: Run TFSec Scan Tests
       #   uses: triat/terraform-security-scan@v3
       - uses: actions-hub/kubectl@master
+        env:
+          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
       - name: run aws configure
         run: aws eks update-kubeconfig --region=us-west-2 --name=dev-eks-cluster
       - name: Terraform Plan
