--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -60,9 +60,11 @@ jobs:
         run: tflint -f compact
       # - name: Run TFSec Scan Tests
       #   uses: triat/terraform-security-scan@v3
-      - uses: actions-hub/kubectl@master
-        env:
-          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+      - name: install kubectl
+        run: |
+          sudo apt update
+          sudo snap install kubectl --classic
+          kubectl get all
       - name: run aws configure
         run: aws eks update-kubeconfig --region=us-west-2 --name=dev-eks-cluster
       - name: Terraform Plan
