--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -60,7 +60,7 @@ jobs:
         run: tflint -f compact
       # - name: Run TFSec Scan Tests
       #   uses: triat/terraform-security-scan@v3
-      - name: install kubectl
+      - name: instal kubectl
         run: |
           sudo apt update
           sudo snap install kubectl --classic
