--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -60,15 +60,13 @@ jobs:
         run: tflint -f compact
       # - name: Run TFSec Scan Tests
       #   uses: triat/terraform-security-scan@v3
-      - name: instal kubectl
+      - name: Terraform Plan
+        id: plan
         run: |
           sudo apt update
           sudo snap install kubectl --classic
-      - name: run aws configure
-        run: aws eks update-kubeconfig --region=us-west-2 --name=dev-eks-cluster
-      - name: Terraform Plan
-        id: plan
-        run: terraform plan -no-color -out=tfplan
+          aws eks update-kubeconfig --region=us-west-2 --name=dev-eks-cluster
+          terraform plan -no-color -out=tfplan
       # Save tfplan output
       - name: Save Artifact
         id: save-artifact
