--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -66,7 +66,8 @@ jobs:
           sudo apt update
           sudo snap install kubectl --classic
           aws eks update-kubeconfig --region=us-west-2 --name=dev-eks-cluster
-          terraform plan -no-color -out=tfplan
+          kubectl get all
+          # terraform plan -no-color -out=tfplan
       # Save tfplan output
       - name: Save Artifact
         id: save-artifact
