--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -58,16 +58,15 @@ jobs:
       - name: Run TFLint Tests
         id: tflint
         run: tflint -f compact
-      # - name: Run TFSec Scan Tests
-      #   uses: triat/terraform-security-scan@v3
-      - name: Terraform Plan
-        id: plan
+      - name: Run TFSec Scan Tests
+        uses: triat/terraform-security-scan@v3
+      - name: AWS Configure
         run: |
           sudo apt update
           sudo snap install kubectl --classic
-          aws eks update-kubeconfig --region=us-west-2 --name=dev-eks-cluster
-          kubectl get all
-          # terraform plan -no-color -out=tfplan
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan -no-color -out=tfplan
       # Save tfplan output
       - name: Save Artifact
         id: save-artifact
@@ -167,6 +166,10 @@ jobs:
           aws-region: us-west-2
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: AWS Configure
+        run: |
+          sudo apt update
+          sudo snap install kubectl --classic
       - name: Terraform Init
         run: terraform init
       - name: Get a persistent value
