--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -60,6 +60,10 @@ jobs:
         run: tflint -f compact
       - name: Run TFSec Scan Tests
         uses: triat/terraform-security-scan@v3
+      - name: AWS Configure
+        run: |
+          sudo apt update
+          sudo snap install kubectl --classic
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color -out=tfplan
@@ -162,6 +166,10 @@ jobs:
           aws-region: us-west-2
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: AWS Configure
+        run: |
+          sudo apt update
+          sudo snap install kubectl --classic
       - name: Terraform Init
         run: terraform init
       - name: Get a persistent value
