--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -186,15 +186,14 @@ jobs:
         run: |
           sudo apt update
           sudo snap install kubectl --classic
-      - name: Terraform Apply
-        id: apply
+      - name: Terraform Apply Step 1
         run: terraform apply -target=module.dev_eks -input=false -auto-approve tfplan
       - name: AWS Configure
         run: |
           sudo apt update
           sudo snap install kubectl --classic
           aws eks update-kubeconfig --region=us-west-2 --name=dev-eks-cluster
-      - name: Terraform Apply
+      - name: Terraform Apply Step 2
         id: apply
         run: |
           echo 'apply<<EOF' >> $GITHUB_OUTPUT
