--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -24,7 +24,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./
+        working-directory: terraform
     steps:
       - name: Checkout
         id: checkout
@@ -141,7 +141,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./
+        working-directory: terraform
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -178,24 +178,18 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           pr: ${{ steps.get_pr_id.outputs.value }}
           name: tfplan
+      - uses: azure/setup-kubectl@v3
+        id: install
+      - name: Set Context (if EKS cluster exists)
+        run: aws eks update-kubeconfig --region=us-west-2 --name=prod-eks-cluster
+        continue-on-error: true
+      - name: Set Context
+        run: export KUBE_CONFIG_PATH=~/.kube/config
       - name: Terraform Apply
+        id: apply-init
+        run: terraform apply -input=false -auto-approve tfplan
+        continue-on-error: true
+      - name: Terraform Apply (post-install steps)
         id: apply
-        run: |
-          echo 'apply<<EOF' >> $GITHUB_OUTPUT
-          terraform apply -input=false -auto-approve tfplan>> $GITHUB_OUTPUT
-          echo 'EOF' >> $GITHUB_OUTPUT
-      - name: Comment Apply
-        id: comment-apply
-        uses: peter-evans/create-or-update-comment@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          issue-number: ${{ steps.get_pr_id.outputs.value }}
-          body: |
-            Terraform Apply:
-            <details><summary>Click to expand</summary>
-
-            ```
-            ${{ steps.apply.outputs.apply }}
-            ```
-
-            </details>
+        run: terraform apply -input=false -auto-approve
+        if: steps.apply-init.outcome == 'failure'
