--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -188,11 +188,8 @@ jobs:
       - name: Terraform Apply
         id: apply-init
         run: terraform apply -input=false -auto-approve
-        # continue-on-error: true
-        with:
-          max_attempts: 2
-          retry_on: error
-      # - name: Terraform Apply (post-install steps)
-      #   id: apply
-      #   run: terraform apply -input=false -auto-approve
-      #   if: steps.apply-init.outcome == 'failure'
+        continue-on-error: true
+      - name: Terraform Apply (post-install steps)
+        id: apply
+        run: terraform apply -input=false -auto-approve
+        if: steps.apply-init.outcome == 'failure'
