--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -189,6 +189,17 @@ jobs:
         run: |
           ls -a
           ls -a ../
+          echo "*****"
+          echo "-----"
+          stat ../tfplan
+          echo "-----"
+          stat ./tfplan
+          echo "-----"
+          stat tfplan
+          echo "-----"
+          stat ./terraform/tfplan
+          echo "-----"
+          ls ../tfplan
       # - name: Terraform Apply
       #   id: apply-init
       #   run: terraform apply -input=false -auto-approve ../tfplan
