--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -61,6 +61,13 @@ jobs:
         run: tflint -f compact
       - name: Run TFSec Scan Tests
         uses: triat/terraform-security-scan@v3
+      - uses: azure/setup-kubectl@v3
+        id: install
+      - name: Set Context (if EKS cluster exists)
+        run: |
+          aws eks update-kubeconfig --region=$AWS_REGION --name=${{ github.ref_name }}-eks-cluster
+          export KUBE_CONFIG_PATH=~/.kube/config
+        continue-on-error: true
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color -out=tfplan
