--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -11,6 +11,7 @@ env:
   TF_INPUT: false
   TERRAFORM_VERSION: 1.6
   TF_IN_AUTOMATION: "True"
+  AWS_REGION: us-west-2
 
 jobs:
   terraform_plan:
@@ -24,7 +25,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./
+        working-directory: terraform
     steps:
       - name: Checkout
         id: checkout
@@ -36,7 +37,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-region: us-west-2
+          aws-region: ${{ env.AWS_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Configure GCP credentials
@@ -60,6 +61,13 @@ jobs:
         run: tflint -f compact
       - name: Run TFSec Scan Tests
         uses: triat/terraform-security-scan@v3
+      - uses: azure/setup-kubectl@v3
+        id: install
+      - name: Set Context (if EKS cluster exists)
+        run: |
+          aws eks update-kubeconfig --region=$AWS_REGION --name=${{ github.base_ref }}-eks-cluster
+          export KUBE_CONFIG_PATH=~/.kube/config
+        continue-on-error: true
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color -out=tfplan
@@ -69,7 +77,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: tfplan
-          path: tfplan
+          path: terraform/tfplan
       - name: Get PR id
         id: get_pr_id
         uses: aaimio/set-persistent-value@v1.2.1
@@ -116,19 +124,19 @@ jobs:
                 body: body
             })
 
-  generate_tag:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    if: github.event_name == 'push'
-    steps:
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: minor
-          default_prerelease_bump: preminor
+  # generate_tag:
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: write
+  #   if: github.event_name == 'push'
+  #   steps:
+  #     - name: Bump version and push tag
+  #       id: tag_version
+  #       uses: mathieudutour/github-tag-action@v6.2
+  #       with:
+  #         github_token: ${{ secrets.GITHUB_TOKEN }}
+  #         default_bump: minor
+  #         default_prerelease_bump: preminor
 
   terraform_apply:
     name: "Terraform Apply"
@@ -141,7 +149,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./
+        working-directory: terraform
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -159,7 +167,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-region: us-west-2
+          aws-region: ${{ env.AWS_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Terraform Init
@@ -178,24 +186,18 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           pr: ${{ steps.get_pr_id.outputs.value }}
           name: tfplan
+      - uses: azure/setup-kubectl@v3
+        id: install
+      - name: Set Context (if EKS cluster exists)
+        run: aws eks update-kubeconfig --region=$AWS_REGION --name=${{ github.ref_name }}-eks-cluster
+        continue-on-error: true
+      - name: Set Context
+        run: export KUBE_CONFIG_PATH=~/.kube/config
       - name: Terraform Apply
+        id: apply-init
+        run: terraform apply -input=false -auto-approve ${{ github.workspace }}/tfplan
+        continue-on-error: true
+      - name: Terraform Apply (post-install steps)
         id: apply
-        run: |
-          echo 'apply<<EOF' >> $GITHUB_OUTPUT
-          terraform apply -input=false -auto-approve tfplan>> $GITHUB_OUTPUT
-          echo 'EOF' >> $GITHUB_OUTPUT
-      - name: Comment Apply
-        id: comment-apply
-        uses: peter-evans/create-or-update-comment@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          issue-number: ${{ steps.get_pr_id.outputs.value }}
-          body: |
-            Terraform Apply:
-            <details><summary>Click to expand</summary>
-
-            ```
-            ${{ steps.apply.outputs.apply }}
-            ```
-
-            </details>
+        run: terraform apply -input=false -auto-approve
+        if: steps.apply-init.outcome == 'failure'
