--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -124,19 +124,19 @@ jobs:
                 body: body
             })
 
-  # generate_tag:
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     contents: write
-  #   if: github.event_name == 'push'
-  #   steps:
-  #     - name: Bump version and push tag
-  #       id: tag_version
-  #       uses: mathieudutour/github-tag-action@v6.2
-  #       with:
-  #         github_token: ${{ secrets.GITHUB_TOKEN }}
-  #         default_bump: minor
-  #         default_prerelease_bump: preminor
+  generate_tag:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    if: github.event_name == 'push'
+    steps:
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          default_bump: minor
+          default_prerelease_bump: preminor
 
   terraform_apply:
     name: "Terraform Apply"
